# ODE-solvers

./: .coveragerc  .gitignore  .readthedocs.yml  LICENSE  README.md  index.rst  pyproject.toml  recorded_solve_times.xlsx  requirements.txt  setup.cfg  setup.py
.github/workflows/: coverage.yml  os_versions.yml  python_versions.yml
core/: solver.py
solver/: ODE_methods.py  SIR_example.py  run_solver.py  run_tests.py  utility.py  version_info.py
solver/docs/: conf.py
solver/tests/: test_run_solver.py
